feat: Setup drizzle

--- a/tauri/Cargo.toml
+++ b/tauri/Cargo.toml
@@ -34,3 +34,5 @@ sqlx = { version = "0.8.6", default-features = false, features = [
 libsqlite3-sys = { version = "0.30.1", features = ["bundled-sqlcipher"] }
 chrono = { version = "0.4.42", features = ["serde"] }
 tauri-plugin-fs = "2.4.4"
+base64 = "0.22.1"
+sqlparser = "0.59.0"
