--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -17,9 +17,11 @@
     "@tanstack/react-router-devtools": "^1.132.0",
     "@tanstack/router-plugin": "^1.132.0",
     "@tauri-apps/api": "^2.9.0",
+    "drizzle-orm": "^0.44.7",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "tailwindcss": "^4.0.6",
+    "uuid": "^13.0.0",
     "vite-tsconfig-paths": "^5.1.4",
     "zod": "^4.1.12"
   },
