--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@biomejs/biome": "2.3.2",
     "typescript": "^5.7.2",
     "bun-types": "^1.3.1",
-    "@tauri-apps/cli": "^2.9.3"
+    "@tauri-apps/cli": "^2.9.3",
+    "drizzle-kit": "^0.31.7"
   },
   "husky": {
     "hooks": {
