--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -10,6 +10,8 @@
     "test": "vitest run"
   },
   "dependencies": {
+    "@heroui/react": "^3.0.0-beta.2",
+    "@heroui/styles": "^3.0.0-beta.2",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-devtools": "^0.7.0",
     "@tanstack/react-query": "^5.90.7",
