--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,5 @@
     "noUnusedParameters": false,
     "noPropertyAccessFromIndexSignature": false
   },
-  "exclude": ["tauri", "**/dist"]
+  "exclude": ["tauri", "**/dist", "**/public"]
 }
